Adjusted the size of the result box to ensure better wrapping. Included the optionsinside the form instead of outisde in another form.

--- a/Calculators/Work-Calculator/style.css
+++ b/Calculators/Work-Calculator/style.css
@@ -65,7 +65,7 @@ button:hover {
     align-items: center;
     border:solid;
     border-radius: 10px;
-    height:4vh;
+    height:auto;   /*changed to auto to adjust accordingly*/
     margin-top: 20px;
     font-size: 1.2em;
     color: red;
